--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "homepage": "https://github.com/mohammedismayil/Mock-json-response#readme",
   "keywords": [],
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.15"
   }
 }
